Add definitions for Modules and Sensors

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Hi. This is the new library for RSX rover CAN communications. This is just here as a placeholder, and will be edited later. 
 
 Your mom
+Your mom
